# insta2events

./: .gitignore  README.md  caldav_push.py  classifier.py  config.py  filter_duplicates.py  fix_locations.py  improve_ocr_data.py  interpreter.py  main.py  ocr_reader.py  pyproject.toml  scraper.py  tracker.py
prompts/de/: prompt-fix-location.txt  prompt-ocr-parse.txt  prompt-parse-vision.txt  prompt-parse.txt  prompt-value.txt  web-search-analyse.txt
prompts/en/: prompt-parse-vision.txt  prompt-parse.txt  prompt-value.txt
util/: basic_classifier.py  config.py  files_operations.py  llm.py  location.py  nominatim.py  ollama_client.py  use_json.py  use_pickel.py
